final design done

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
       padding: 0;
     }
   </style>
+  <style>
+    .link{
+      text-decoration: none;
+      color: inherit;
+    }
+  </style>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>React Blog App</title>
 </head>
